sandc/test/fixtures/astRegression/shouldSucceed/productions/interfaceDeclaration/InterfaceUseStatements.sand
pub interface InterfaceUseStatements {
    use foo.foo;
    use bar.bar;

    foo(arg: boolean): int;
}