sandc/test/fixtures/astRegression/shouldFail/productions/interfaceMethodDeclaration/VisibilityModifiers.sand
pub interface VisibilityModifiers {
    pub foo();
}